--- a/source.yml
+++ b/source.yml
@@ -42,6 +42,10 @@ version_control:
     - gui/.*:
       github: rock-core/gui-$PACKAGE_BASENAME
       branch: $ROCK_BRANCH
+    
+    - gui/qtpropertybrowser:
+      github: abhijitkundu/QtPropertyBrowser
+
     - drivers/orogen/.*:
       github: rock-core/drivers-orogen-$PACKAGE_BASENAME
       branch: $ROCK_BRANCH
