Add gui/osg_qt5 for feature/qt5 branch of gui/osg_qt4 source package
For gentoo, there actually is a package, using
https://github.com/openscenegraph/osgQt/

--- a/source.yml
+++ b/source.yml
@@ -46,6 +46,19 @@ version_control:
     - gui/qtpropertybrowser:
       github: abhijitkundu/QtPropertyBrowser
 
+    - gui/vizkit3d:
+      branch: feature/qt5
+
+    - gui/rock_widget_collection:
+      branch: feature/qt5
+
+    - base/types:
+      branch: feature/qt5
+
+    - gui/osg_qt5:
+      github: rock-core/gui-osg_qt4
+      branch: feature/qt5
+
     - drivers/orogen/.*:
       github: rock-core/drivers-orogen-$PACKAGE_BASENAME
       branch: $ROCK_BRANCH
